# advent_2021

./: .bazelrc  Cargo.toml  WORKSPACE
cargo/: BUILD.bazel
src/: BUILD.bazel  bingo.rs  boxes.rs  cave.rs  crab.rs  device.rs  diag.rs  dive.rs  hello_world.rs  hydrothermal.rs  lanternfish.rs  lava_tube.rs  lib.rs  octopus.rs  origami.rs  polymer.rs  seven_segment.rs  sonar.rs  syntax.rs  testutil.rs  util.rs
