[package]
authors = ["Scott Minor <minor@minorhacks.com>"]
edition = "2021"
name = "advent_2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0.47"
rayon = "1.5.1"

[dev-dependencies]
table-test = "0.2"

[package.metadata.raze]
genmode = "Remote"
package_aliases_dir = "third_party/cargo"
targets = [
  "x86_64-unknown-linux-gnu",
]
workspace_path = "//third_party/cargo"
