load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@crates//:defs.bzl", "crate")

# To add third-party dependencies:
# 1. Add dependency to Cargo.toml
# 2. Add dep for crate using `crate()` function

rust_library(
    name = "advent_2018",
    srcs = glob(["*.rs"]),
    deps = [
        crate("anyhow"),
    ],
)

rust_test(
    name = "advent_2018_test",
    crate = ":advent_2018",
    deps = [
        crate("table-test"),
    ],
)

BINARIES = [
    "day_01",
]

[
    rust_binary(
        name = b,
        srcs = ["bin/{}/main.rs".format(b)],
        data = ["bin/{}/input.txt".format(b)],
        deps = [":advent_2018"],
    )
    for b in BINARIES
]
