load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@crates//:defs.bzl", "crate")

# To add third-party dependencies:
# 1. Add dependency to Cargo.toml
# 2. Add dep for crate using `crate()` function

rust_library(
    name = "advent_2021",
    srcs = glob(["*.rs"]),
    deps = [
        crate("anyhow"),
        crate("rayon"),
    ],
)

rust_test(
    name = "advent_2021_test",
    crate = ":advent_2021",
    deps = [
        crate("table-test"),
    ],
)

BINARIES = [
    "day_01",
    "day_02",
    "day_03",
    "day_04",
    "day_05",
    "day_06",
    "day_07",
    "day_08",
]

[
    rust_binary(
        name = b,
        srcs = ["bin/{}/main.rs".format(b)],
        data = ["bin/{}/input.txt".format(b)],
        deps = [":advent_2021"],
    )
    for b in BINARIES
]
